# Vulkan_Engine

ProvaVulkan/: CMakeLists.txt  main.cpp
ProvaVulkan/Vulkan/: INSTALL_BOM.json  uninstall.sh
ProvaVulkan/Vulkan/Applications/vkconfig.app/Contents/: CodeResources
ProvaVulkan/Vulkan/Applications/vkconfig.app/Contents/PlugIns/bearer/: libqgenericbearer.dylib
ProvaVulkan/Vulkan/Applications/vkconfig.app/Contents/PlugIns/iconengines/: libqsvgicon.dylib
ProvaVulkan/Vulkan/Applications/vkconfig.app/Contents/PlugIns/imageformats/: libqicns.dylib  libqico.dylib  libqjpeg.dylib  libqmacjp2.dylib  libqtiff.dylib
ProvaVulkan/Vulkan/Applications/vkconfig.app/Contents/_CodeSignature/: CodeResources
ProvaVulkan/Vulkan/Applications/vkcube.app/Contents/: Info.plist
ProvaVulkan/Vulkan/Applications/vkcube.app/Contents/Frameworks/: libvulkan.1.2.162.dylib
ProvaVulkan/Vulkan/Applications/vkcube.app/Contents/MacOS/: vkcube
ProvaVulkan/Vulkan/Applications/vkcube.app/Contents/_CodeSignature/: CodeResources
ProvaVulkan/Vulkan/Applications/vkcubepp.app/Contents/: CodeResources  Info.plist
ProvaVulkan/Vulkan/Applications/vkcubepp.app/Contents/Frameworks/: libvulkan.1.2.162.dylib
ProvaVulkan/Vulkan/Applications/vkcubepp.app/Contents/MacOS/: vkcubepp
ProvaVulkan/Vulkan/Applications/vulkaninfo.app/Contents/_CodeSignature/: CodeDirectory  CodeResources  CodeSignature
ProvaVulkan/Vulkan/macOS/lib/: libspirv-cross-c-shared.0.44.0.dylib
ProvaVulkan/Vulkan/macOS/lib/cmake/SPIRV-Tools/: SPIRV-ToolsTarget.cmake
ProvaVulkan/Vulkan/macOS/lib/pkgconfig/: spirv-cross-c-shared.pc
(+34 files in other folders)
